Todas as alterações significativas ao CatecheSis são registadas aqui.


## [Versão 2.3.2] - 2026-xx-xx

#### Melhorias de usabilidade:
- A barra de menu é agora colapsada em dispositivos com ecrãs pequenos; 

#### Correções:
- Campo NIF era ilegível nalguns telemóveis;
- A data é agora exibida por extenso, em português, na página da catequese virtual, independentemente da língua do servidor;


## [Versão 2.3.1] - 2025-10-13

#### Correções:
- Corrigida fórmula de validação do NIF português nos formulários;


## [Versão 2.3.0] - 2025-10-12

#### Novidades:
- Adicionado novo campo NIF nas fichas dos catequizandos, necessário nalgumas paróquias para efeitos de seguro de acidentes pessoais. Este campo pode ser ativado ou desativado nas configurações;
- É agora possível carregar comprovativos de sacramentos em formato JPG e PNG (para além de PDF);
- Novos interruptores para abrir/fechar inscrições e/ou renovações de matrícula de forma independente;

#### Melhorias de usabilidade:
- *Mãe* passa a ser o encarregado de educação selecionado por omissão, atendendo às estatísticas reportadas voluntariamente por algumas paróquias;

#### Correções:
- A fórmula de cálculo do catecismo recomendado para inscrição na catequese com base na idade foi revista para Portugal, nos casos em que a inscrição se efetua na segunda metade do ano catequético (entre Janeiro e Junho);
- Corrigida desformatação do fundo personalizado na página inicial pública em ecrãs grandes;
- O nome do utilizador atualmente autenticado, mostrado na barra de menu, mudava erradamente quando um administrador modificava os dados da conta de outro utilizador;
- A estatística "Percursos catequéticos completos" foi corrigida para considerar o número de catecismos configurado para a paróquia;



## [Versão 2.2.1] - 2024-02-13

#### Correções:
- Corrigido bug que provocava erro fatal (array nulo) em alguns sistemas;


## [Versão 2.2.0] - 2024-02-13

#### Novidades:
- Notificação de atualização disponível;